--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,7 @@ target 'rishtaaunty' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-face-detection', :path => '../node_modules/react-native-face-detection'
   pod 'RNAudioRecorderPlayer', :path => '../node_modules/react-native-audio-recorder-player'
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
