--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-draggable-grid": "^2.1.7",
     "react-native-elements": "^3.4.2",
     "react-native-emoji-selector": "^0.2.0",
+    "react-native-face-detection": "^0.1.1",
     "react-native-fast-image": "^8.5.11",
     "react-native-flash-message": "^0.2.1",
     "react-native-geocoding": "^0.5.0",
@@ -98,6 +99,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-native-video": "^5.2.0",
     "react-native-video-cache": "^2.7.3",
+    "react-native-vision-camera": "^2.15.2",
     "react-native-webrtc": "^111.0.0",
     "react-native-webview": "^11.16.0",
     "react-redux": "^7.2.6",
