--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -232,6 +232,7 @@ dependencies {
     
     implementation project(':react-native-notifications')
     implementation 'com.google.android.gms:play-services-maps:+'
+    implementation 'com.google.android.gms:play-services-ads:20.4.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.0'
 
