--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rishtaaunty",
-  "version": "0.0.30",
+  "version": "0.0.33",
   "private": true,
   "scripts": {
     "reset": "yarn start --reset-cache",
@@ -80,6 +80,7 @@
     "react-native-notifications": "^4.3.1",
     "react-native-onesignal": "^4.5.0",
     "react-native-pager-view": "^5.4.13",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-permissions": "^3.6.0",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "2.4.0",
