--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,7 +23,7 @@ org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=Xmx4096mm -XX:+HeapDumpOnOutOfMemor
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
+android.suppressUnsupportedCompileSdk=33
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
 org.gradle.daemon=true
