--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@gorhom/bottom-sheet": "^4",
     "@homielab/react-native-auto-scroll": "^0.0.10",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "react-native-google-mobile-ads": "^11.0.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/cli": "^7.0.1",
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/netinfo": "^9.3.0",
-    "@react-native-firebase/app": "^13.1.0",
-    "@react-native-firebase/messaging": "^13.1.0",
+    "@react-native-firebase/analytics": "^20.3.0",
+    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/crashlytics": "^20.3.0",
+    "@react-native-firebase/messaging": "^20.3.0",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.2.1",
@@ -44,7 +45,7 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-audio-recorder-player": "^3.5.1",
+    "react-native-audio-recorder-player": "3.6.4",
     "react-native-audiowaveform": "^2.0.5",
     "react-native-callkeep": "^4.3.3",
     "react-native-camera": "^3.40.0",
@@ -52,6 +53,7 @@
     "react-native-card-flip": "^1.0.7",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-connectycube": "^3.22.3",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-country-flag": "^1.1.6",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^4.2.2",
@@ -64,8 +66,9 @@
     "react-native-flash-message": "^0.2.1",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "^2.4.0",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-google-mobile-ads": "^11.0.0",
     "react-native-iap": "^10.0.0",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^5.1.0",
@@ -80,7 +83,6 @@
     "react-native-notifications": "^4.3.1",
     "react-native-onesignal": "^5.0.4",
     "react-native-pager-view": "^5.4.13",
-    "react-native-countdown-component": "^2.7.1",
     "react-native-permissions": "^3.6.0",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "2.4.0",
