fix onesignal + firebase+Onesignal pods,

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,6 +51,7 @@ allprojects {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
+            url "$rootDir/../node_modules/react-native-video-cache/android/libs" // <- build files for AndroidVideoCache
         }
         maven {
             // Android JSC is installed from npm
