--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,6 +2,7 @@ require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 platform :ios, '12.0'
+use_modular_headers!
 
 target 'rishtaaunty' do
   permissions_path = '../node_modules/react-native-permissions/ios'
@@ -21,11 +22,10 @@ target 'rishtaaunty' do
     :hermes_enabled => false
   )
 
-  pod 'react-native-face-detection', :path => '../node_modules/react-native-face-detection'
-  pod 'RNAudioRecorderPlayer', :path => '../node_modules/react-native-audio-recorder-player'
-  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
-  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
-  pod 'RNCallKeep', :path => '../node_modules/react-native-callkeep'
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
 
   target 'rishtaauntyTests' do
     inherit! :complete
@@ -36,11 +36,14 @@ target 'rishtaaunty' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  # use_flipper!()
 
   post_install do |installer|
-    react_native_post_install(installer)
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+      end
+    end
   end
 end
 
