--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "reset": "yarn start --reset-cache",
+    "clean": "cd android && ./gradlew clean",
+    "debug-build": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && cd android && ./gradlew assembleDebug"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.23.3",
@@ -21,10 +24,10 @@
     "@react-native-community/cli": "^7.0.1",
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/netinfo": "^9.3.0",
-    "@react-native-firebase/analytics": "^20.3.0",
-    "@react-native-firebase/app": "^20.3.0",
-    "@react-native-firebase/crashlytics": "^20.3.0",
-    "@react-native-firebase/messaging": "^20.3.0",
+    "@react-native-firebase/analytics": "20.3.0",
+    "@react-native-firebase/app": "20.3.0",
+    "@react-native-firebase/crashlytics": "20.3.0",
+    "@react-native-firebase/messaging": "20.3.0",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.2.1",
@@ -62,7 +65,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-face-detection": "^0.1.1",
-    "react-native-fast-image": "^8.5.11",
+    "react-native-fast-image": "^8.6.3",
     "react-native-flash-message": "^0.2.1",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
@@ -80,8 +83,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-multiple-select": "^0.5.11",
-    "react-native-notifications": "^4.3.1",
-    "react-native-onesignal": "^5.0.4",
+    "react-native-onesignal": "^4.5.1",
     "react-native-pager-view": "^5.4.13",
     "react-native-permissions": "^3.6.0",
     "react-native-progress": "^5.0.0",
