renew app groups

--- a/ios/rishtaaunty/rishtaaunty.entitlements
+++ b/ios/rishtaaunty/rishtaaunty.entitlements
@@ -10,7 +10,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.app.rishtaaunty.onesignal</string>
+		<string>group.RCL7UY7RFQ.com.app.rishtaaunty</string>
 	</array>
 </dict>
 </plist>
